--- a/product-card-0/style.css
+++ b/product-card-0/style.css
@@ -49,11 +49,29 @@ body{
 
 .gradient{
     position: absolute;
-    width: 0;
+    width: 100%;
     height: 100%;
     left: 0;
     top: 0;
     z-index: -2;
+}
+
+.first{
+    z-index: 0;
+    animation: 1s width ease;
+}
+
+.second{
+    z-index: -1;
+}
+
+@keyframes width{
+    from{
+        width: 0%;
+    }
+    to{
+        width: 100%;
+    }
 }
 
 .gradient[color="blue"]{
@@ -62,8 +80,6 @@ body{
 
 .gradient[color="red"]{
     background-image: linear-gradient(45deg, #d62926, #ee625f);
-    width: 100%;
-    z-index: 0;
 }
 
 
