--- a/landing-page-0/css/style.css
+++ b/landing-page-0/css/style.css
@@ -115,6 +115,165 @@ span {
     }
 }
 
+@keyframes spinner-linspin {
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes spinner-easespin {
+    12.5% {
+        transform: rotate(135deg);
+    }
+
+    25% {
+        transform: rotate(270deg);
+    }
+
+    37.5% {
+        transform: rotate(405deg);
+    }
+
+    50% {
+        transform: rotate(540deg);
+    }
+
+    62.5% {
+        transform: rotate(675deg);
+    }
+
+    75% {
+        transform: rotate(810deg);
+    }
+
+    78.5% {
+        transform: rotate(945deg);
+    }
+
+    to {
+        transform: rotate(1080);
+    }
+}
+
+@keyframes spinner-left-spin {
+    0% {
+        transform: rotate(130deg);
+    }
+
+    50% {
+        transform: rotate(-5deg);
+    }
+
+    to {
+        transform: rotate(130deg);
+    }
+}
+
+@keyframes spinner-right-spin {
+    0% {
+        transform: rotate(-130deg);
+    }
+
+    50% {
+        transform: rotate(5deg);
+    }
+
+    to {
+        transform: rotate(-130deg);
+    }
+}
+
+/* --------------- preloader ---------- */
+.preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: table;
+    height: 100%;
+    width: 100%;
+    background-color: #fff;
+    z-index: 99999;
+}
+
+.preloader .loader {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.preloader .loader .spinner {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 64px;
+    margin-left: -32px;
+    z-index: 18;
+    pointer-events: none;
+}
+
+.preloader .loader .spinner .spinner-container {
+    pointer-events: none;
+    position: absolute;
+    width: 100%;
+    padding-bottom: 100%;
+    top: 50%;
+    left: 50%;
+    margin-top: -50%;
+    margin-left: -50%;
+    animation: spinner-linspin 1568ms linear infinite;
+}
+
+.preloader .loader .spinner .spinner-container .spinner-rotator {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    animation: spinner-easespin 5332ms cubic-bezier(.4, 0, .2, 1) infinite both;
+}
+
+.preloader .loader .spinner .spinner-container .spinner-rotator .spinner-right {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    overflow: hidden;
+    left: 50%;
+}
+
+.preloader .loader .spinner .spinner-container .spinner-rotator .spinner-left {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    right: 50%;
+}
+
+.preloader .loader .spinner-right .spinner-circle {
+    left: -100%;
+    right: 0;
+    border-left-color: #eceff8;
+    animation: spinner-right-spin 1333ms cubic-bezier(.4, 0, .2, 1) infinite both;
+
+}
+
+.preloader .loader .spinner-left .spinner-circle {
+    left: 0;
+    right: -100%;
+    border-right-color: #eceff8;
+    animation: spinner-left-spin 1333ms cubic-bezier(.4, 0, .2, 1) infinite both;
+}
+
+.preloader .loader .spinner-circle {
+    box-sizing: border-box;
+    position: absolute;
+    width: 200%;
+    height: 100%;
+    border-style: solid;
+    border-color: #0898e7 #0898e7 #eceff8;
+    border-radius: 50%;
+    border-width: 6px;
+}
+
+
 /* --------------- navbar css --------- */
 .navbar-area {
     position: absolute;
@@ -123,6 +282,13 @@ span {
     width: 100%;
     z-index: 9;
 }
+
+.sticky {
+    position: fixed;
+    background-color: #fff;
+    box-shadow: 0 20px 50px 0 rgba(0, 0, 0, 0.5);
+}
+
 .navbar {
     position: relative;
     padding: 20px 0;
@@ -130,6 +296,28 @@ span {
 
 .navbar-brand .image {
     max-width: 150px;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px),
+(max-width: 767px) {
+    .navbar-collapse {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        padding: 5px 12px;
+        background-color: #fff;
+        box-shadow: 0 15px 20px 0 rgb(0 0 0 / 10%);
+    }
+}
+
+.navbar-light .navbar-toggler {
+    color: transparent;
+    border-color: transparent;
+}
+
+.navbar-toggler:focus{
+    box-shadow: none;
 }
 
 .navbar-nav .nav-item {
@@ -163,6 +351,14 @@ span {
     transition: all .3s ease-out 0s;
 }
 
+@media only screen and (min-width: 768px) and (max-width: 991px),
+(max-width: 767px) {
+    .navbar-nav .nav-item .nav-link::before {
+        position: relative;
+    }
+}
+
+
 .navbar-nav .nav-item .nav-link.active::before,
 .navbar-nav .nav-item .nav-link:hover::before {
     opacity: 1;
@@ -179,6 +375,13 @@ span {
 
 .header-hero-content {
     position: relative;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px),
+(max-width: 767px) {
+    .header-hero-content{
+        margin-top: 30%;
+    }
 }
 
 .header-hero-content .header-title {
@@ -228,6 +431,13 @@ span {
     position: relative;
     padding-top: 80px;
     animation: bounceTop-1 3s ease infinite;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px),
+(max-width: 767px) {
+    .header-image img{
+        height: 0;
+    }
 }
 
 .header-shape-1 {
@@ -321,4 +531,508 @@ span {
     top: 5%;
     color: white;
     background: transparent;
+}
+
+
+/* ------------ section feature ---------------- */
+.feature-section .single-feature {
+    padding: 30px;
+    text-align: center;
+    box-shadow: 0 15px 15px 0 rgba(154 ,154 ,154, .4);
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px),
+(max-width: 767px) {
+    .feature-section .single-feature{
+        box-shadow: none;
+    }
+}
+
+.feature-section .single-feature .icon {
+    position: relative;
+    width: 75px;
+    height: 75px;
+    background-color: #487cff;
+    font-size: 40px;
+    color: white;
+    border-radius: 5px;
+    margin: 0 auto 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.feature-section .single-feature .icon::after{
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-color: inherit;
+    position: absolute;
+    z-index: -1;
+    top: -8px;
+    right: -8px;
+    border-radius: inherit;
+    opacity: .2;
+    transition: all .3s ease-out 0s;
+}
+
+.feature-section .single-feature .icon:hover:after{
+    top: 8px;
+    right: 8px;
+}    
+
+.feature-section .single-feature .icon.color-2{
+    background-color: #ffb260;
+}
+
+.feature-section .single-feature .icon.color-3{
+    background-color: #ff92a5;
+}
+
+.feature-section .single-feature .content h3 {
+    font-weight: 600;
+    margin-bottom: 25px;
+}
+
+/*---------- About Section Start -----------*/
+.about-area {
+    overflow: hidden;
+}
+
+.about-image {
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    margin-left: 50px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.about-image .about-shape {
+    position: relative;
+    width: 394px;
+    height: 394px;
+    background-color: #0898e7;
+    border-radius: 50%;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px),
+(max-width: 767px) {
+    .about-image .about-shape{
+        width: 380px;
+        height: 380px;
+    }
+}
+
+.about-image .about-shape::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    border-radius: 50%;
+    border: 2px solid #0898e7;
+    border-top-color: transparent;
+    border-right-color: transparent;
+    
+    transform: scale(1.1) rotate(25deg);
+}
+
+
+.about-image .app{
+    max-width: 280px;
+    position: absolute;
+    top: 100px;
+    left: 95px;
+    transform: rotate(-20deg) translateY(-15%);
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px),
+(max-width: 767px) {
+    .about-image .app{
+        max-width: 250px;
+    }
+}
+
+.title {
+    font-size: 35px;
+    font-weight: 600;
+}
+
+.text {
+    margin-top: 20px;
+}
+
+.about-content .main-btn {
+    margin-top: 40px;
+}
+
+/* --------- Testimonial css ---------- */
+.testimonial-section {
+    padding: 100px 0;
+    background-color: #a3bdff;
+}
+
+.testimonial-section .tns-controls {
+    position: absolute;
+    width: 100%;
+    height: 60px;
+    left: 0;
+    top: 60%;
+    transform: translateY(-50%);
+}
+
+.testimonial-section .tns-controls button svg {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    top: 8%;
+    display: flex;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, .13);
+    color: #fff;
+    z-index: 22;
+}
+
+.testimonial-section .tns-controls button svg:hover {
+    background-color: #fff;
+    color: #487cff;
+}
+
+
+.testimonial-section .tns-controls button .fa-angle-left {
+    position: absolute;
+    left: 10%;
+}
+
+.testimonial-section .tns-controls button .fa-angle-right {
+    position: absolute;
+    right: 10%;
+}
+
+.testimonial-section .tns-controls button {
+    border: none;
+    background: 0 0;
+}
+
+.testimonial-section .testimonial-active-wrapper {
+    position: relative;
+}
+
+.testimonial-section .testimonial-wrapper {
+    padding: 40px;
+}
+
+.testimonial-section .single-testimonial {
+    position: relative;
+    padding: 45px 50px;
+    background-color: #fff;
+    border-radius: 10px;
+    z-index: 9;
+}
+
+.testimonial-section .single-testimonial::before {
+    top: -20px;
+    right: -20px;
+    opacity: .26;
+    z-index: -1;
+}
+
+.testimonial-section .single-testimonial::after {
+    top: -40px;
+    right: -40px;
+    opacity: .13;
+    z-index: -2;
+}
+
+.testimonial-section .single-testimonial::before,
+.testimonial-section .single-testimonial::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    border-radius: inherit;
+}
+
+.testimonial-section .single-testimonial .info .image-2 {
+    width: 100%;
+    max-width: 65px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+
+.testimonial-section .single-testimonial .info h4 {
+    margin-top: 4px;
+    margin-bottom: 8px;
+}
+
+.testimonial-section .single-testimonial .info p {
+    margin-bottom: 15px;
+    font-size: 16px;
+}
+
+.testimonial-section .single-testimonial .quote {
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    font-size: 80px;
+    line-height: 1;
+    color: rgba(72, 124, 255, .5);
+}
+
+/* ------ pricing css --------- */
+
+.faq-section .accordion-item {
+    margin-bottom: 20px;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0 3px 6px rgba(142, 142, 142, .16);
+}
+
+.faq-section .accordion-item button {
+    position: relative;
+    padding: 18px 25px;
+    font-size: 18px;
+    font-weight: 700;
+    text-align: left;
+    background-color: #fff;
+    color: #1d2a5d;
+}
+
+/* .accordion-button:not(.collapsed)::after {
+    background-image: url(/img/accordion.svg);
+} */
+
+.accordion-button:focus {
+    box-shadow: none;
+}
+
+/* --------- download css ---------- */
+
+.download-area {
+    overflow: hidden;
+}
+
+.download-area .download-image .download-shape-1 {
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    background-color: #b3d7ff;
+    border-radius: 50%;
+    z-index: -1;
+}
+
+.download-area .download-image .image-3 {
+    position: relative;
+    max-width: 350px;
+    padding-top: 65px;
+    padding-left: 60px;
+    padding-bottom: 60px;
+}
+
+.download-content ul {
+    margin-top: 35px;
+}
+
+.download-content ul li {
+    display: inline-block;
+    margin-top: 15px;
+}
+
+.download-content ul li a {
+    width: 210px;
+    height: 65px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    box-shadow: -15px 10px 30px 0 rgb(0 0 0 / 30%);
+}
+
+.download-content ul li a.app-store {
+    margin-right: 28px;
+    background-color: #0898e7;
+}
+
+.download-content ul li a.play-store {
+    background-color: #525a63;
+}
+
+/* ----------- footer css --------- */
+
+.footer-area {
+    position: relative;
+    overflow: hidden;
+}
+
+.footer-area .footer-shape {
+    position: absolute;
+}
+
+.footer-area .footer-shape.shape-1 {
+    width: 75px;
+    height: 75px;
+    left: 70px;
+    background-color: #fe5f59;
+    border-radius: 50%;
+    opacity: .55;
+    animation: animation-1 2s linear infinite;
+
+}
+
+.footer-area .footer-shape.shape-2 {
+    width: 39px;
+    height: 39px;
+    left: 15%;
+    bottom: 40px;
+    background-color: #33c8c1;
+    border-radius: 50%;
+    opacity: .55;
+    animation: animation-1 2s linear infinite;
+
+}
+
+.footer-area .footer-shape.shape-3 {
+    width: 20px;
+    height: 20px;
+    left: 35%;
+    top: 40px;
+    background-color: #361cc1;
+    border-radius: 50%;
+    opacity: .55;
+    animation: animation-1 2s linear infinite;
+
+}
+
+.footer-area .footer-shape.shape-4 {
+    width: 15px;
+    height: 15px;
+    left: 50%;
+    bottom: 5px;
+    background-color: #eba31a;
+    border-radius: 50%;
+    opacity: .55;
+    animation: animation-1 2s linear infinite;
+
+}
+
+.footer-area .footer-shape.shape-5 {
+    width: 39px;
+    height: 39px;
+    right: 37%;
+    top: 0px;
+    background-color: #e29e19;
+    border-radius: 50%;
+    opacity: .55;
+    animation: animation-1 2s linear infinite;
+
+}
+
+.footer-area .footer-shape.shape-6 {
+    width: 15px;
+    height: 15px;
+    right: 15%;
+    top: 125px;
+    background-color: #b60d81;
+    border-radius: 50%;
+    opacity: .55;
+    animation: animation-1 2s linear infinite;
+
+}
+
+.footer-area .logo {
+    max-width: 200px;
+}
+
+.footer-about {
+    max-width: 320px;
+}
+
+.footer-about .text {
+    margin-top: 30px;
+}
+
+.footer-about .social {
+    margin-top: 30px;
+}
+
+.footer-about .social li {
+    display: inline-block;
+    margin-right: 25px;
+}
+
+.footer-about .social li a {
+    font-size: 20px;
+    color: #747e88;
+    transition: all .3s ease-out 0s;
+}
+
+.footer-about .social li a:hover {
+    color: #0898e7;
+}
+
+.footer-link-wrapper {
+    width: 50%;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px),
+(max-width: 767px) {
+    .footer-link {
+        padding-top: 30px;
+    }
+}
+
+.footer-link .link {
+    padding-top: 10px;
+}
+
+.footer-link .link li {
+    margin-top: 10px;
+}
+
+.footer-link .link li a {
+    text-decoration: none;
+    font-size: 18px;
+    color: #747e88;
+    transition: all .3s ease-out 0s;
+}
+
+.footer-link .link li a:hover {
+    color: #0898e7;
+}
+
+.footer-title .title {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px),
+(max-width: 767px) {
+    .footer-contact {
+        padding-top: 30px;
+    }
+}
+
+.footer-contact .contact-list li .contact-info .info-content .text a {
+    color: #747e88;
+    transition: all .3s ease-out 0s;
+}
+
+.footer-contact .contact-list li .contact-info .info-content .text a:hover {
+    color: #0898ef;
+}
+
+.footer-copyright .copyright {
+    border-top: 2px solid #747e88;
+    padding-top: 10px;
+    padding-bottom: 25px;
+}
+
+.footer-copyright .copyright .copyright-text .text a {
+    color: #747e88;
 }
